--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🎉WEBS🎉</title>
+
+     <link rel="icon" href="https://cdn.discordapp.com/attachments/1132673001498869820/1156370539275882496/indir__1_-removebg-preview.png?ex=6514b97c&is=651367fc&hm=85a62cfc0ce601c021a85f044f61770545b766352249a2df3a08d3989111b610&">
+    
     <style>
         body {
             background-image: url('https://cdn.discordapp.com/attachments/1132673001498869820/1156368842285649980/Adsz.png?ex=6514b7e8&is=65136668&hm=d086d205a532617392b2a8db204928ea43044d02bbb738e159612c04112eac55&');
             background-size: cover;
-            background-position: center;
+            background-position: center top; /* Arka plan resmini yukarıda hizalama */
             background-repeat: no-repeat;
             text-align: center;
         }
